@@ -96,7 +96,9 @@ class ValueCountTermList : public TermList {
     Xapian::Internal::RefCntPtr<Xapian::ValueCountMatchSpy::Internal> spy;
   public:
 
-    ValueCountTermList(ValueCountMatchSpy::Internal * spy_) : spy(spy_) {
+    explicit ValueCountTermList(ValueCountMatchSpy::Internal * spy_)
+	: spy(spy_)
+    {
 	it = spy->values.begin();
 	started = false;
     }
